deploy/k3s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: happygallery
  labels:
    app.kubernetes.io/part-of: happygallery
